--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
+jose==1.0.0
 Mako==1.3.5
 MarkupSafe==2.1.5
+pycrypto==2.6.1
 pydantic==2.8.2
 pydantic_core==2.20.1
+PyJWT==2.9.0
 PyMySQL==1.1.1
 python-dotenv==1.0.1
 sniffio==1.3.1
