--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-dotenv = "^1.0.1"
 pymysql = "^1.1.1"
 jose = "^1.0.0"
 pyjwt = "^2.9.0"
+pycryptodome = "^3.20.0"
+cryptography = "^43.0.1"
 
 
 [build-system]
